# PocketFlow

./: .dockerignore  .gitignore  Dockerfile  finetuning.py  main_generate.py  main_generate_config.py  make_pretrain_data.py  mise.toml  pyproject.toml
docker/: entrypoint.sh
gen_results/1bvr/2025-12-23-21-34-25/: generated.sdf  generated.smi  metrics.dir
gen_results/1bvr/2025-12-23-21-35-51/: generated.sdf  generated.smi  metrics.dir  readme.txt
gen_results/1bvr/2025-12-23-21-42-46/: generated.sdf  generated.smi  metrics.dir
pocket_flow/: __init__.py  generate.py
pocket_flow/gdbp_model/: atom_flow.py  bond_flow.py  encoder.py  focal_net.py  layers.py  position_predictor.py  types.py
pocket_flow/utils/: ParseFile.py  __init__.py  data.py  generate_utils.py  load_dataset.py  metrics.py  model_io.py  process_raw.py  train.py  transform.py  transform_utils.py
scripts/: test_load_ckpt.py
tests/pocket_flow/gdbp_model/: test__init__.py  test_atom_flow.py  test_bond_flow.py  test_encoder.py  test_focal_net.py  test_layers.py  test_net_utils.py  test_pocket_flow.py  test_position_predictor.py  test_types.py
